unpackaged/main/default/objects/Opportunity_Promo__c/Opportunity_Promo__c.object-meta.xml
<CustomObject>
    <description>Links the Sproduct Promo Object to the Opportunity SKU object</description>
    <label>Opportunity Promo</label>
    <nameField>
        <displayFormat>OPRO-{00000000}</displayFormat>
        <label>Opportunity Promo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Promos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>