unpackaged/main/default/objects/Opportunity_Promo__c/fields/Applied_to_Product__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Product__c</fullName>
    <formula>Opportunity_SKU__r.SKU_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied to Product</label>
    <type>Text</type>
</CustomField>