unpackaged/main/default/objects/Opportunity_Promo__c/fields/Discount_Duration__c.field-meta.xml
<CustomField>
    <fullName>Discount_Duration__c</fullName>
    <label>Discount Duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>