unpackaged/main/default/objects/Opportunity_Promo__c/fields/Discount_Lock__c.field-meta.xml
<CustomField>
    <fullName>Discount_Lock__c</fullName>
    <formula>Product_SKU_Promotion__r.Promotion__r.Discount_Lock_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount $ Lock</label>
    <type>Checkbox</type>
</CustomField>