unpackaged/main/default/objects/Opportunity_Promo__c/fields/Discount_Number__c.field-meta.xml
<CustomField>
    <fullName>Discount_Number__c</fullName>
    <description>Converts discount % to a number for processing in external systems</description>
    <formula>Discount__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>