unpackaged/main/default/objects/Opportunity_Promo__c/fields/Discount_Qty__c.field-meta.xml
<CustomField>
    <fullName>Discount_Qty__c</fullName>
    <label>Discount Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>