unpackaged/main/default/objects/Opportunity_Promo__c/fields/Discount_Qty_Lock__c.field-meta.xml
<CustomField>
    <fullName>Discount_Qty_Lock__c</fullName>
    <formula>Product_SKU_Promotion__r.Promotion__r.Discount_Qty_Lock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Qty Lock</label>
    <type>Checkbox</type>
</CustomField>