unpackaged/main/default/objects/Opportunity_Promo__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <description>Type of discount from the related promotion record</description>
    <formula>TEXT(Product_SKU_Promotion__r.Promotion__r.Discount_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Type</label>
    <type>Text</type>
</CustomField>