unpackaged/main/default/objects/Opportunity_Promo__c/fields/Discount_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value_Type__c</fullName>
    <formula>Text(Product_SKU_Promotion__r.Promotion__r.Discount_Value_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Value Type</label>
    <type>Text</type>
</CustomField>