unpackaged/main/default/objects/Opportunity_Promo__c/fields/Opp_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_Name__c</fullName>
    <formula>Opportunity_SKU__r.SKU_Product__c</formula>
    <label>Opp Product Name</label>
    <type>Text</type>
</CustomField>