unpackaged/main/default/objects/Opportunity_Promo__c/fields/Opportunity_SKU__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity SKU</label>
    <referenceTo>Opportunity_SKU__c</referenceTo>
    <relationshipLabel>Opportunity Promos</relationshipLabel>
    <relationshipName>Opportunity_Promos</relationshipName>
    <type>Lookup</type>
</CustomField>