unpackaged/main/default/objects/Opportunity_Promo__c/fields/Product_SKU_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product SKU Promotion</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_SKU_Promotions__c</referenceTo>
    <relationshipLabel>Opportunity Promos</relationshipLabel>
    <relationshipName>Opportunity_Promos</relationshipName>
    <type>Lookup</type>
</CustomField>