unpackaged/main/default/objects/Opportunity_Promo__c/fields/Promo_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Promo_End_Date__c</fullName>
    <formula>Product_SKU_Promotion__r.Promotion__r.End_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo End Date</label>
    <type>DateTime</type>
</CustomField>