unpackaged/main/default/objects/Opportunity_Promo__c/fields/Promo_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Promo_Is_Active__c</fullName>
    <formula>Product_SKU_Promotion__r.Promotion__r.Active_Promo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Is Active</label>
    <type>Checkbox</type>
</CustomField>