unpackaged/main/default/objects/Opportunity_Promo__c/fields/Promo_Status__c.field-meta.xml
<CustomField>
    <fullName>Promo_Status__c</fullName>
    <formula>Text(Product_SKU_Promotion__r.Promotion__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Status</label>
    <type>Text</type>
</CustomField>