unpackaged/main/default/objects/Opportunity_Promo__c/fields/Promotion_Discount__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Discount__c</fullName>
    <formula>Product_SKU_Promotion__r.Promotion__r.Promotion_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Discount $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>