unpackaged/main/default/objects/Opportunity_Promo__c/fields/Promotion_Name__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Name__c</fullName>
    <formula>Product_SKU_Promotion__r.Promotion__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Name</label>
    <type>Text</type>
</CustomField>