unpackaged/main/default/objects/Opportunity_Promo__c/fields/Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Type__c</fullName>
    <formula>TEXT(Product_SKU_Promotion__r.Promotion__r.Discount_Type__c) + &#39; &#39; +  TEXT(Product_SKU_Promotion__r.Promotion__r.Short_Term_Discount_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Type</label>
    <type>Text</type>
</CustomField>