unpackaged/main/default/objects/Opportunity_Promo__c/fields/Short_Term_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Discount_Type__c</fullName>
    <formula>TEXT(Product_SKU_Promotion__r.Promotion__r.Short_Term_Discount_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short-Term Discount Type</label>
    <type>Text</type>
</CustomField>