unpackaged/main/default/objects/Opportunity_Promo__c/fields/Submitted_for_billing__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted for billing</label>
    <type>Checkbox</type>
</CustomField>