unpackaged/main/default/objects/Opportunity_Promo__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <formula>Promotion_Discount__c*Discount_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>