unpackaged/main/default/objects/Opportunity_Promo__c/listViews/All_Opportunity_Promotions.listView-meta.xml
<ListView>
    <fullName>All_Opportunity_Promotions</fullName>
    <columns>NAME</columns>
    <columns>Opp_Product_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunity Promotions</label>
</ListView>